instead of clicking the "Create" button. [Michael Peters]

=item *

Going from Trash -> View Detail -> View Log -> Back for Media objects
no longer results in an ISE. [Michael Peters]

=item *

Catch more kinds of template errors when previewing a story so they
don't result in an ISE, but a better error message. [Michael Peters]

=back

=head2 3.07 - November 5, 2009

=over

=item * 

Fixed various failing tests. [Michael Peters]

=item *

Fixed problem with URL wrapping that prevented copy-pasting of those URLs
from the UI. [Michael Peters]

=item *

Adding C<MinSpareServers>, C<MaxSpareServers>, C<MaxClients> F<krang.conf>
directives that can be used to control how many running Apache processes there
are. [Michael Peters]

=item *

Fixed JS error on Transform Image screen when cancelling and going to
another page. [Michael Peters]

=item *

Fixed IE8 where the Category Chooser on Edit Media screen
was hidden behind every table but the initial one (the meta-data
table). [Michael Peters]

=back

=head2 3.06 - October 18, 2009

=over

=item *

Adding a C<--no-upgrade> option to F<bin/krang_addon_installer> to
make it easier to manage in a cluster. [Michael Peters]

=item *

Unknown publish errors from the Web UI now result in a normal ISE
(die) like other errors and are displayed with the same modal dialog
in the UI. This also triggers the C<ErrorNotificationEmail> to be sent
if configured. [Michael Peters]

=item *

Fixed error when publishing a MediaLink element that didn't actually
have a media object selected. Now we just silently return and continue
with the publish. [Michael Peters]

=item *

Normalize Unicode characters coming in so that we always have single
grapheme characters. Unicode can have "composed" characters where the
same character is actually represented by combining multiple characters.
Use NFC normalization so that we just store a single character. This will
make it easier to do things like full text search on Unicode characters